---
source: tool/src/kotlin/mod.rs
expression: struct_code
---
package dev.diplomattest.somelib

import com.sun.jna.Callback
import com.sun.jna.Library
import com.sun.jna.Native
import com.sun.jna.Pointer
import com.sun.jna.Structure

internal interface MyNativeStructLib: Library {
    fun MyNativeStruct_new(): MyNativeStructNative
    fun MyNativeStruct_test_multi_arg_callback(f: DiplomatCallback_MyNativeStruct_test_multi_arg_callback_diplomatCallback_f_Native, x: Int): Int
    fun MyNativeStruct_get_u_byte_slice(): Slice
    fun MyNativeStruct_boolean_result(): ResultByteUnit
    fun MyNativeStruct_ubyte_result(): ResultFFIUint8Unit
}

internal class MyNativeStructNative: Structure(), Structure.ByValue {
    @JvmField
    internal var a: Byte = 0;
    @JvmField
    internal var b: Byte = 0;
    @JvmField
    internal var c: FFIUint8 = FFIUint8();
    @JvmField
    internal var d: Short = 0;
    @JvmField
    internal var e: FFIUint16 = FFIUint16();
    @JvmField
    internal var f: Int = 0;
    @JvmField
    internal var g: FFIUint32 = FFIUint32();
    @JvmField
    internal var h: Long = 0;
    /**
     * Documentation for the struct field `i`
     */
    @JvmField
    internal var i: FFIUint64 = FFIUint64();
    @JvmField
    internal var j: Int = 0;
    @JvmField
    internal var k: Float = 0.0F;
    @JvmField
    internal var l: Double = 0.0;
    @JvmField
    internal var m: Slice = Slice();
    @JvmField
    internal var n: Pointer = Pointer(0);

    // Define the fields of the struct
    override fun getFieldOrder(): List<String> {
        return listOf("a", "b", "c", "d", "e", "f", "g", "h", "i", "j", "k", "l", "m", "n")
    }
}




internal class OptionMyNativeStructNative constructor(): Structure(), Structure.ByValue {
    @JvmField
    internal var value: MyNativeStructNative = MyNativeStructNative()

    @JvmField
    internal var isOk: Byte = 0

    // Define the fields of the struct
    override fun getFieldOrder(): List<String> {
        return listOf("value", "isOk")
    }

    internal fun option(): MyNativeStructNative? {
        if (isOk == 1.toByte()) {
            return value
        } else {
            return null
        }
    }


    constructor(value: MyNativeStructNative, isOk: Byte): this() {
        this.value = value
        this.isOk = isOk
    }

    companion object {
        internal fun some(value: MyNativeStructNative): OptionMyNativeStructNative {
            return OptionMyNativeStructNative(value, 1)
        }

        internal fun none(): OptionMyNativeStructNative {
            return OptionMyNativeStructNative(MyNativeStructNative(), 0)
        }
    }

}


internal interface Runner_DiplomatCallback_MyNativeStruct_test_multi_arg_callback_diplomatCallback_f: Callback {
    fun invoke(lang_specific_context: Pointer?, arg0: Int, arg1: Int, arg2: Int ): Int
}

internal class DiplomatCallback_MyNativeStruct_test_multi_arg_callback_diplomatCallback_f_Native: Structure(), Structure.ByValue {
    @JvmField
    internal var data_: Pointer = Pointer(0L);
    @JvmField
    internal var run_callback: Runner_DiplomatCallback_MyNativeStruct_test_multi_arg_callback_diplomatCallback_f
        = object :  Runner_DiplomatCallback_MyNativeStruct_test_multi_arg_callback_diplomatCallback_f {
                override fun invoke(lang_specific_context: Pointer?, arg0: Int, arg1: Int, arg2: Int ): Int {
                    throw Exception("Default callback runner -- should be replaced.")
                }
            }
    @JvmField
    internal var destructor: Callback = object : Callback {
        fun invoke(obj_pointer: Pointer) {
            DiplomatJVMRuntime.dropRustCookie(obj_pointer);
        }
    };

    // Define the fields of the struct
    override fun getFieldOrder(): List<String> {
        return listOf("data_", "run_callback", "destructor")
    }
}

// Explicit non-JNA struct wrapper to use as a GC hook; this will wrap the native callback
// so that the global_ref construction is run on a real object instead of the JNA Structure
// passed by-value to native code (which results in a null global_ref as it's not an address).
internal class DiplomatCallback_MyNativeStruct_test_multi_arg_callback_diplomatCallback_f_holder (
    internal val nativeStruct: DiplomatCallback_MyNativeStruct_test_multi_arg_callback_diplomatCallback_f_Native) {}

internal class DiplomatCallback_MyNativeStruct_test_multi_arg_callback_diplomatCallback_f internal constructor (
    internal val nativeStruct: DiplomatCallback_MyNativeStruct_test_multi_arg_callback_diplomatCallback_f_Native) {
    val data_: Pointer = nativeStruct.data_
    val run_callback: Callback = nativeStruct.run_callback
    val destructor: Callback = nativeStruct.destructor

    companion object {
        val NATIVESIZE: Long = Native.getNativeSize(DiplomatCallback_MyNativeStruct_test_multi_arg_callback_diplomatCallback_f_Native::class.java).toLong()

        fun fromCallback(cb: (Int, Int, Int)->Int): DiplomatCallback_MyNativeStruct_test_multi_arg_callback_diplomatCallback_f {
            val callback: Runner_DiplomatCallback_MyNativeStruct_test_multi_arg_callback_diplomatCallback_f = object :  Runner_DiplomatCallback_MyNativeStruct_test_multi_arg_callback_diplomatCallback_f {
                override fun invoke(lang_specific_context: Pointer?, arg0: Int, arg1: Int, arg2: Int ): Int {
                    return cb(arg0, arg1, arg2);
                }
            }
            val cb_wrap = DiplomatCallback_MyNativeStruct_test_multi_arg_callback_diplomatCallback_f_Native()
            cb_wrap.run_callback = callback;
            val holder = DiplomatCallback_MyNativeStruct_test_multi_arg_callback_diplomatCallback_f_holder(cb_wrap)
            cb_wrap.data_ = DiplomatJVMRuntime.buildRustCookie(holder as Object);
            return DiplomatCallback_MyNativeStruct_test_multi_arg_callback_diplomatCallback_f(cb_wrap)
        }
    }
}
/**
 * Documentation for the struct
 */
class MyNativeStruct (var a: Boolean, var b: Byte, var c: UByte, var d: Short, var e: UShort, var f: Int, var g: UInt, var h: Long, var i: ULong, var j: Int, var k: Float, var l: Double, var m: DoubleArray, var n: Opaque) {
    companion object {

        internal val libClass: Class<MyNativeStructLib> = MyNativeStructLib::class.java
        internal val lib: MyNativeStructLib = Native.load("somelib", libClass)
        val NATIVESIZE: Long = Native.getNativeSize(MyNativeStructNative::class.java).toLong()

        internal fun fromNative(nativeStruct: MyNativeStructNative, bEdges: List<Any?>): MyNativeStruct {
            val a: Boolean = nativeStruct.a > 0
            val b: Byte = nativeStruct.b
            val c: UByte = nativeStruct.c.toUByte()
            val d: Short = nativeStruct.d
            val e: UShort = nativeStruct.e.toUShort()
            val f: Int = nativeStruct.f
            val g: UInt = nativeStruct.g.toUInt()
            val h: Long = nativeStruct.h
            val i: ULong = nativeStruct.i.toULong()
            val j: Int = nativeStruct.j
            val k: Float = nativeStruct.k
            val l: Double = nativeStruct.l
            val m: DoubleArray = PrimitiveArrayTools.getDoubleArray(nativeStruct.m)
            val n: Opaque = Opaque(nativeStruct.n, listOf(), false)

            return MyNativeStruct(a, b, c, d, e, f, g, h, i, j, k, l, m, n)
        }

        @JvmStatic
        
        fun new_(): MyNativeStruct {
            // This lifetime edge depends on lifetimes: 'b
            val bEdges: MutableList<Any> = mutableListOf();
            
            val returnVal = lib.MyNativeStruct_new();
            val returnStruct = MyNativeStruct.fromNative(returnVal, bEdges)
            return returnStruct
        }
        @JvmStatic
        
        fun testMultiArgCallback(f: (Int, Int, Int)->Int, x: Int): Int {
            
            val returnVal = lib.MyNativeStruct_test_multi_arg_callback(DiplomatCallback_MyNativeStruct_test_multi_arg_callback_diplomatCallback_f.fromCallback(f).nativeStruct, x);
            return (returnVal)
        }
        @JvmStatic
        
        fun getUByteSlice(): UByteArray {
            // This lifetime edge depends on lifetimes: 'a
            val aEdges: MutableList<Any> = mutableListOf();
            
            val returnVal = lib.MyNativeStruct_get_u_byte_slice();
                return PrimitiveArrayTools.getUByteArray(returnVal)
        }
        @JvmStatic
        
        fun booleanResult(): Result<Boolean> {
            
            val returnVal = lib.MyNativeStruct_boolean_result();
            val nativeOkVal = returnVal.getNativeOk();
            if (nativeOkVal != null) {
                return (nativeOkVal > 0).ok()
            } else {
                return UnitError().err()
            }
        }
        @JvmStatic
        
        fun ubyteResult(): Result<UByte> {
            
            val returnVal = lib.MyNativeStruct_ubyte_result();
            val nativeOkVal = returnVal.getNativeOk();
            if (nativeOkVal != null) {
                return (nativeOkVal.toUByte()).ok()
            } else {
                return UnitError().err()
            }
        }
    }
    internal fun toNative(bAppendArray: Array<MutableList<Any>>): MyNativeStructNative {
        var native = MyNativeStructNative()
        native.a = if (this.a) 1 else 0
        native.b = this.b
        native.c = FFIUint8(this.c)
        native.d = this.d
        native.e = FFIUint16(this.e)
        native.f = this.f
        native.g = FFIUint32(this.g)
        native.h = this.h
        native.i = FFIUint64(this.i)
        native.j = this.j
        native.k = this.k
        native.l = this.l
        native.m = PrimitiveArrayTools.borrow(this.m).into(listOf(*bAppendArray)).slice
        native.n = this.n.handle
        return native
    }

    internal fun bEdges(): List<Any?> {
        return TODO("todo")
    }
}
